--- a/ui/styles/typography.css
+++ b/ui/styles/typography.css
@@ -3,6 +3,7 @@
   --font-family-body:system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
   --font-family-heading:var(--font-family-body);
   --font-family-code:ui-monospace,Menlo,Consolas,monospace;
+  --font-family-default:var(--font-family-body);
 
   /* font weight */
   --font-weight-light:300;
@@ -14,9 +15,10 @@
   /* body font sizes */
   --font-size-x-small:0.75rem;
   --font-size-small:0.875rem;
-  --font-size-normal:1rem;
+  --font-size-medium:1rem;
   --font-size-large:1.125rem;
   --font-size-x-large:1.25rem;
+  --font-size-default:var(--font-size-medium);
 
   /* heading font sizes */
   --h6-font-size:1.25rem;
@@ -34,17 +36,17 @@
 
 /* body */
 body{
-  font-family:var(--font-family-body);
-  font-size:var(--font-size-normal);
+  font-family:var(--font-family-default);
+  font-size:var(--font-size-default);
   line-height:var(--line-height-normal);
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
 }
 
 /* form font */
-button,input,select,textarea{
-  font-family:var(--font-family-body);
-  font-size:var(--font-size-normal);
+input,select,textarea{
+  font-family:var(--font-family-default);
+  font-size:var(--font-size-default);
 }
 
 /* code font */
@@ -60,9 +62,9 @@ pre{
 /* inline link styling */
 a{
   text-decoration-line:underline;
-  text-decoration-style:dotted;
+  text-decoration-style:dashed;
   text-underline-offset:0.2rem;
-  text-decoration-thickness:0.15rem;
+  text-decoration-thickness:1px;
 }
 
 /* normalize lists */
