--- a/ui/styles/core.css
+++ b/ui/styles/core.css
@@ -91,7 +91,7 @@ a{
   transition-property:outline-color,color;
 
   &:hover{color:var(--link-color-hover);}
-  &:active{color:var(--link-color);}
+  &:active{color:var(--link-color-active);}
 }
 
 ::-webkit-scrollbar-thumb{
