--- a/docs/components/button.html
+++ b/docs/components/button.html
@@ -64,6 +64,13 @@
         </ui-button>
         <ui-button>
           <button>
+            <ui-icon name="settings"></ui-icon>
+            Button
+            <ui-icon name="settings"></ui-icon>
+          </button>
+        </ui-button>
+        <ui-button>
+          <button>
             Button
             <ui-icon name="settings"></ui-icon>
           </button>
@@ -79,6 +86,14 @@
   &lt;button&gt;
     &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
     Button
+  &lt;/button&gt;
+&lt;/ui-button&gt;
+
+&lt;ui-button&gt;
+  &lt;button&gt;
+    &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+    Button
+    &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
   &lt;/button&gt;
 &lt;/ui-button&gt;
 
